# powersync-tauri

./: .env.example  .env.template  .gitignore  .prettierignore  README.md  biome.jsonc  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.husky/: pre-commit
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/app/: global.css  index.tsx  provider.tsx  router.tsx
src/app/routes/: home.tsx  not-found.tsx
src/components/molecules/: BuiltWithLogos.tsx  GithubStarButton.tsx  PowerSyncContent.tsx
src/components/molecules/BuiltWithLogos/: index.tsx
src/components/providers/: AppSchema.ts  SystemProvider.tsx
src/components/ui/: badge.tsx  button.tsx  tooltip.tsx
src/config/: env.ts
src/core/: App.tsx  global.css
src/features/: PowerSyncContent.tsx  github-star-button.tsx  powersync-content.tsx
src/features/BuiltWithLogos/: index.tsx
src/features/built-with/: index.tsx
src/features/errors/: app-error.tsx  error-base.tsx
src/features/providers/: AppSchema.ts  SystemProvider.tsx
src/hooks/powersync/: powersync-provider.tsx
src/lib/: BackendConnector.ts  create-env.ts
src/lib/powersync/: app-schema.ts  backend-connector.ts  powersync-provider.tsx
src/lib/utils/: create-env.ts  index.ts
